flicker issue resolved

--- a/static/style.css
+++ b/static/style.css
@@ -1527,7 +1527,7 @@ body{
     font-family: josefin sans;
 }
 .manage-card:hover {
-    transform: translateY(-5px); /* Elevate card on hover */
+    transform: translateY(-1px); /* Elevate card on hover */
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.65); /* Increase shadow on hover */
 }
 
